<resources>
    <string name="app_name">Fragment</string>
    <string name="Login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Passward">Passward</string>
    <string name="Register">REGISTER</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="title_activity_home_bottom_navigationand_side_drawer">
        HomeBottomNavigationandSideDrawerActivity
    </string>
    <string name="title_activity_homewith_bottomnavigation">HomewithBottomnavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="weather">Weather</string>
    <string name="audioplayer">Audio Player</string>
    <string name="contact">Contact</string>
    <string name="Homewithnav">Home\n</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>